[package]
name = "FreeRTOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"

[build]
target = "aarch64-unknown-none"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.aarch64-unknown-none]
linker = "aarch64-none-elf-gcc"

[unstable]
features = ["restricted_std"]
