[package]
name = "FreeRTOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "*"
panic-abort = "0.3.2"
panic-halt = "0.2.0"

[build-dependencies]
cc = "1.0"

[build]
target = "aarch64-unknown-none"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

